syntax = "proto3";
option go_package = ".;pbgo";
import "TimeStamp.proto";

message PostMessage {
    // {"primary_key": "default"}
    uint64 id = 1;
    
    // parent id 為被回覆的貼文的 post id
    uint64 parent_id = 2;
    
    int32 user_id = 3;
    
    // {"size": 500}
    string content = 4;

    // {"default": "current_timestamp()"}
    TimeStamp create_time = 5;

    // {"default": "current_timestamp()", "update": "current_timestamp()"}
    TimeStamp update_time = 6;
    
    // {"ignore": "true"}
    int64 create_utc = 7;
    
    // {"ignore": "true"}
    int64 update_utc = 8;
}